# othello

cmpt-310-a5-reversi-master/: CMakeLists.txt  main.cpp
cmpt-310-a5-reversi-master/players/AIPlayers/: heuristicAIPlayer.h  monteCarloAI.h  positionalStrategyAIPlayer.h  randomAI.h
cmpt-310-a5-reversi-master/players/humanPlayers/: humanPlayer.h
cmpt-310-a5-reversi-master/reversiLogic/: board.h  gameLogic.h  gameStates.h  reversi.h  tiles.h
